overflow problem fixed

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -91,4 +91,5 @@
 .section-media iframe {
   width: 100%;
   height: 56.25vw;
+  overflow: hidden;
 }
